--- a/src/Nancy.Patch/Nancy.Patch.csproj
+++ b/src/Nancy.Patch/Nancy.Patch.csproj
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PatchExecutor.cs" />
     <Compile Include="PatchExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Factories\PropertyExtractorFactory.cs" />
     <Compile Include="PropertyExtractors\IPropertyExtractor.cs" />
     <Compile Include="PropertyExtractors\JsonPropertyExtractor.cs" />
   </ItemGroup>
