--- a/src/Nancy.Patch/Nancy.Patch.csproj
+++ b/src/Nancy.Patch/Nancy.Patch.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="PatchExecutor.cs" />
     <Compile Include="PatchExtensions.cs" />
+    <Compile Include="PatchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factories\PropertyExtractorFactory.cs" />
     <Compile Include="PropertyExtractors\IPropertyExtractor.cs" />
