Added the PropertyNotFoundException class.

--- a/src/Nancy.Patch/Nancy.Patch.csproj
+++ b/src/Nancy.Patch/Nancy.Patch.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\PropertyNotFoundException.cs" />
     <Compile Include="PatchExecutor.cs" />
     <Compile Include="PatchExtensions.cs" />
     <Compile Include="PatchResult.cs" />
