--- a/src/Nancy.Patch.Tests/packages.config
+++ b/src/Nancy.Patch.Tests/packages.config
@@ -3,5 +3,6 @@
   <package id="CsQuery" version="1.3.3" targetFramework="net45" />
   <package id="Nancy" version="1.4.3" targetFramework="net45" />
   <package id="Nancy.Testing" version="1.4.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.4.1" targetFramework="net45" />
 </packages>
